global/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefixes
spec:
  stripPrefix:
    prefixes:
    - /welcomeglobal
