global/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: welcomeglobal
  name: welcomeglobal
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: welcomeglobal
  type: LoadBalancer
