global/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.middlewares: stripprefixes@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: welcomeglobal-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: rwelcomeglobal
            port:
              number: 80
        path: /welcomeglobal
        pathType: ImplementationSpecific
